--- a/myEngine/files/x86/imgui.ini
+++ b/myEngine/files/x86/imgui.ini
@@ -34,10 +34,10 @@ Size=159,461
 Collapsed=0
 
 [Window][Inspector]
-Pos=711,19
-Size=569,520
+Pos=713,19
+Size=567,520
 Collapsed=0
-DockId=0x00000005,2
+DockId=0x00000005,3
 
 [Window][Docking]
 Pos=864,196
@@ -45,14 +45,14 @@ Size=237,427
 Collapsed=0
 
 [Window][Debug Tools]
-Pos=711,19
-Size=569,520
+Pos=713,19
+Size=567,520
 Collapsed=0
 DockId=0x00000005,1
 
 [Window][Configuration]
-Pos=711,19
-Size=569,520
+Pos=713,19
+Size=567,520
 Collapsed=0
 DockId=0x00000005,0
 
@@ -69,7 +69,7 @@ Collapsed=0
 
 [Window][Scene]
 Pos=0,19
-Size=709,520
+Size=711,520
 Collapsed=0
 DockId=0x00000004,0
 
@@ -92,10 +92,16 @@ Pos=0,0
 Size=1280,720
 Collapsed=0
 
+[Window][Textures]
+Pos=713,19
+Size=567,520
+Collapsed=0
+DockId=0x00000005,2
+
 [Docking][Data]
 DockSpace     ID=0xFA06BC56 Pos=0,19 Size=1280,701 Split=Y
   DockNode    ID=0x00000001 Parent=0xFA06BC56 SizeRef=1280,718 Split=X
-    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=709,686 CentralNode=1 SelectedTab=0x18B8C0DE
-    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=569,686 SelectedTab=0xF02CD328
+    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=711,686 CentralNode=1 SelectedTab=0x18B8C0DE
+    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=567,686 SelectedTab=0x08595350
   DockNode    ID=0x00000002 Parent=0xFA06BC56 SizeRef=1280,248 SelectedTab=0xF9BEF62A
 
