--- a/myEngine/files/x86/imgui.ini
+++ b/myEngine/files/x86/imgui.ini
@@ -102,6 +102,6 @@ DockId=0x00000005,2
 DockSpace     ID=0xFA06BC56 Pos=0,19 Size=1280,701 Split=Y
   DockNode    ID=0x00000001 Parent=0xFA06BC56 SizeRef=1280,718 Split=X
     DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=711,686 CentralNode=1 SelectedTab=0x18B8C0DE
-    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=567,686 SelectedTab=0x08595350
+    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=567,686 SelectedTab=0xF02CD328
   DockNode    ID=0x00000002 Parent=0xFA06BC56 SizeRef=1280,248 SelectedTab=0xF9BEF62A
 
