Changing gameObject component identification from name (string) to type (enum)

--- a/myEngine/files/x86/imgui.ini
+++ b/myEngine/files/x86/imgui.ini
@@ -34,8 +34,8 @@ Size=159,461
 Collapsed=0
 
 [Window][Inspector]
-Pos=713,19
-Size=567,520
+Pos=704,19
+Size=576,520
 Collapsed=0
 DockId=0x00000005,3
 
@@ -45,14 +45,14 @@ Size=237,427
 Collapsed=0
 
 [Window][Debug Tools]
-Pos=713,19
-Size=567,520
+Pos=704,19
+Size=576,520
 Collapsed=0
 DockId=0x00000005,1
 
 [Window][Configuration]
-Pos=713,19
-Size=567,520
+Pos=704,19
+Size=576,520
 Collapsed=0
 DockId=0x00000005,0
 
@@ -69,7 +69,7 @@ Collapsed=0
 
 [Window][Scene]
 Pos=0,19
-Size=711,520
+Size=702,520
 Collapsed=0
 DockId=0x00000004,0
 
@@ -93,15 +93,15 @@ Size=1280,720
 Collapsed=0
 
 [Window][Textures]
-Pos=713,19
-Size=567,520
+Pos=704,19
+Size=576,520
 Collapsed=0
 DockId=0x00000005,2
 
 [Docking][Data]
 DockSpace     ID=0xFA06BC56 Pos=0,19 Size=1280,701 Split=Y
   DockNode    ID=0x00000001 Parent=0xFA06BC56 SizeRef=1280,718 Split=X
-    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=711,686 CentralNode=1 SelectedTab=0x18B8C0DE
-    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=567,686 SelectedTab=0xF02CD328
+    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=702,686 CentralNode=1 SelectedTab=0x18B8C0DE
+    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=576,686 SelectedTab=0x5CF1DB40
   DockNode    ID=0x00000002 Parent=0xFA06BC56 SizeRef=1280,248 SelectedTab=0xF9BEF62A
 
