Decoupling inspector, hierarchy and components from Editor to independent classes

--- a/myEngine/files/x86/imgui.ini
+++ b/myEngine/files/x86/imgui.ini
@@ -34,10 +34,10 @@ Size=159,461
 Collapsed=0
 
 [Window][Inspector]
-Pos=704,19
-Size=576,520
+Pos=956,19
+Size=324,419
 Collapsed=0
-DockId=0x00000005,3
+DockId=0x00000005,2
 
 [Window][Docking]
 Pos=864,196
@@ -45,20 +45,20 @@ Size=237,427
 Collapsed=0
 
 [Window][Debug Tools]
-Pos=704,19
-Size=576,520
+Pos=956,19
+Size=324,419
 Collapsed=0
 DockId=0x00000005,1
 
 [Window][Configuration]
-Pos=704,19
-Size=576,520
+Pos=956,19
+Size=324,419
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Console]
-Pos=0,541
-Size=1280,179
+Pos=0,440
+Size=1280,280
 Collapsed=0
 DockId=0x00000002,0
 
@@ -69,9 +69,9 @@ Collapsed=0
 
 [Window][Scene]
 Pos=0,19
-Size=702,520
+Size=773,419
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000006,0
 
 [Window][EditorWindow]
 Pos=0,20
@@ -93,15 +93,23 @@ Size=1280,720
 Collapsed=0
 
 [Window][Textures]
-Pos=704,19
-Size=576,520
+Pos=956,19
+Size=324,419
 Collapsed=0
-DockId=0x00000005,2
+DockId=0x00000005,3
+
+[Window][Hierarchy]
+Pos=775,19
+Size=179,419
+Collapsed=0
+DockId=0x00000004,0
 
 [Docking][Data]
-DockSpace     ID=0xFA06BC56 Pos=0,19 Size=1280,701 Split=Y
-  DockNode    ID=0x00000001 Parent=0xFA06BC56 SizeRef=1280,718 Split=X
-    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=702,686 CentralNode=1 SelectedTab=0x18B8C0DE
-    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=576,686 SelectedTab=0x5CF1DB40
-  DockNode    ID=0x00000002 Parent=0xFA06BC56 SizeRef=1280,248 SelectedTab=0xF9BEF62A
+DockSpace       ID=0xFA06BC56 Pos=0,19 Size=1280,701 Split=Y
+  DockNode      ID=0x00000001 Parent=0xFA06BC56 SizeRef=1280,419 Split=X SelectedTab=0xF02CD328
+    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=773,620 CentralNode=1 SelectedTab=0x18B8C0DE
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=505,620 Split=X SelectedTab=0x788BAA0D
+      DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=179,620 SelectedTab=0x788BAA0D
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=324,620 SelectedTab=0x5CF1DB40
+  DockNode      ID=0x00000002 Parent=0xFA06BC56 SizeRef=1280,280 SelectedTab=0xF9BEF62A
 
