--- a/myEngine/files/x86/imgui.ini
+++ b/myEngine/files/x86/imgui.ini
@@ -110,6 +110,6 @@ DockSpace       ID=0xFA06BC56 Pos=0,19 Size=1280,701 Split=Y
     DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=773,620 CentralNode=1 SelectedTab=0x18B8C0DE
     DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=505,620 Split=X SelectedTab=0x788BAA0D
       DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=179,620 SelectedTab=0x788BAA0D
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=324,620 SelectedTab=0x5CF1DB40
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=324,620 SelectedTab=0xF02CD328
   DockNode      ID=0x00000002 Parent=0xFA06BC56 SizeRef=1280,280 SelectedTab=0xF9BEF62A
 
