Load textures as PNG and assign them to any mesh

--- a/myEngine/files/x86/imgui.ini
+++ b/myEngine/files/x86/imgui.ini
@@ -34,10 +34,10 @@ Size=159,461
 Collapsed=0
 
 [Window][Inspector]
-Pos=956,19
-Size=324,419
+Pos=966,19
+Size=314,486
 Collapsed=0
-DockId=0x00000005,2
+DockId=0x00000005,0
 
 [Window][Docking]
 Pos=864,196
@@ -45,22 +45,22 @@ Size=237,427
 Collapsed=0
 
 [Window][Debug Tools]
-Pos=956,19
-Size=324,419
+Pos=966,507
+Size=314,213
 Collapsed=0
-DockId=0x00000005,1
+DockId=0x00000008,1
 
 [Window][Configuration]
-Pos=956,19
-Size=324,419
+Pos=966,507
+Size=314,213
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000008,0
 
 [Window][Console]
-Pos=0,440
-Size=1280,280
+Pos=0,507
+Size=964,213
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000007,0
 
 [Window][scene]
 Pos=1,19
@@ -69,7 +69,7 @@ Collapsed=0
 
 [Window][Scene]
 Pos=0,19
-Size=773,419
+Size=773,486
 Collapsed=0
 DockId=0x00000006,0
 
@@ -93,23 +93,25 @@ Size=1280,720
 Collapsed=0
 
 [Window][Textures]
-Pos=956,19
-Size=324,419
+Pos=966,507
+Size=314,213
 Collapsed=0
-DockId=0x00000005,3
+DockId=0x00000008,2
 
 [Window][Hierarchy]
 Pos=775,19
-Size=179,419
+Size=189,486
 Collapsed=0
 DockId=0x00000004,0
 
 [Docking][Data]
 DockSpace       ID=0xFA06BC56 Pos=0,19 Size=1280,701 Split=Y
-  DockNode      ID=0x00000001 Parent=0xFA06BC56 SizeRef=1280,419 Split=X SelectedTab=0xF02CD328
+  DockNode      ID=0x00000001 Parent=0xFA06BC56 SizeRef=1280,486 Split=X SelectedTab=0xF02CD328
     DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=773,620 CentralNode=1 SelectedTab=0x18B8C0DE
     DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=505,620 Split=X SelectedTab=0x788BAA0D
-      DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=179,620 SelectedTab=0x788BAA0D
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=324,620 SelectedTab=0xF02CD328
-  DockNode      ID=0x00000002 Parent=0xFA06BC56 SizeRef=1280,280 SelectedTab=0xF9BEF62A
+      DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=189,620 SelectedTab=0x788BAA0D
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=314,620 SelectedTab=0xF02CD328
+  DockNode      ID=0x00000002 Parent=0xFA06BC56 SizeRef=1280,213 Split=X SelectedTab=0xF9BEF62A
+    DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=964,213 SelectedTab=0xF9BEF62A
+    DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=314,213 SelectedTab=0x169CEE22
 
