--- a/myEngine/files/x86/imgui.ini
+++ b/myEngine/files/x86/imgui.ini
@@ -34,8 +34,8 @@ Size=159,461
 Collapsed=0
 
 [Window][Inspector]
-Pos=966,19
-Size=314,486
+Pos=1606,19
+Size=314,504
 Collapsed=0
 DockId=0x00000005,0
 
@@ -45,20 +45,20 @@ Size=237,427
 Collapsed=0
 
 [Window][Debug Tools]
-Pos=966,507
-Size=314,213
+Pos=1652,525
+Size=268,492
 Collapsed=0
 DockId=0x00000008,1
 
 [Window][Configuration]
-Pos=966,507
-Size=314,213
+Pos=1652,525
+Size=268,492
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Console]
-Pos=0,507
-Size=964,213
+Pos=0,525
+Size=1650,492
 Collapsed=0
 DockId=0x00000007,0
 
@@ -69,7 +69,7 @@ Collapsed=0
 
 [Window][Scene]
 Pos=0,19
-Size=773,486
+Size=1413,504
 Collapsed=0
 DockId=0x00000006,0
 
@@ -89,29 +89,29 @@ Collapsed=0
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1280,720
+Size=1920,1017
 Collapsed=0
 
 [Window][Textures]
-Pos=966,507
-Size=314,213
+Pos=1652,525
+Size=268,492
 Collapsed=0
 DockId=0x00000008,2
 
 [Window][Hierarchy]
-Pos=775,19
-Size=189,486
+Pos=1415,19
+Size=189,504
 Collapsed=0
 DockId=0x00000004,0
 
 [Docking][Data]
-DockSpace       ID=0xFA06BC56 Pos=0,19 Size=1280,701 Split=Y
-  DockNode      ID=0x00000001 Parent=0xFA06BC56 SizeRef=1280,486 Split=X SelectedTab=0xF02CD328
+DockSpace       ID=0xFA06BC56 Pos=0,19 Size=1920,998 Split=Y
+  DockNode      ID=0x00000001 Parent=0xFA06BC56 SizeRef=1280,354 Split=X SelectedTab=0xF02CD328
     DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=773,620 CentralNode=1 SelectedTab=0x18B8C0DE
     DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=505,620 Split=X SelectedTab=0x788BAA0D
       DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=189,620 SelectedTab=0x788BAA0D
       DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=314,620 SelectedTab=0xF02CD328
-  DockNode      ID=0x00000002 Parent=0xFA06BC56 SizeRef=1280,213 Split=X SelectedTab=0xF9BEF62A
-    DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=964,213 SelectedTab=0xF9BEF62A
-    DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=314,213 SelectedTab=0x169CEE22
+  DockNode      ID=0x00000002 Parent=0xFA06BC56 SizeRef=1280,345 Split=X SelectedTab=0xF9BEF62A
+    DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=1650,213 SelectedTab=0xF9BEF62A
+    DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=268,213 SelectedTab=0x5CF1DB40
 
