Change Model loading procedure to recursive through nodes + solve bug when trying to change textures

--- a/myEngine/files/x86/imgui.ini
+++ b/myEngine/files/x86/imgui.ini
@@ -1,117 +1,63 @@
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1280,720
+Collapsed=0
+
 [Window][Debug##Default]
-Pos=380,221
-Size=660,481
-Collapsed=0
-
-[Window][Another Window]
 Pos=60,60
-Size=493,427
-Collapsed=0
-
-[Window][Performance]
-Pos=60,60
-Size=291,363
-Collapsed=0
-
-[Window][Editor]
-Pos=60,60
-Size=218,161
-Collapsed=0
-
-[Window][Menu]
-Pos=980,0
-Size=300,720
-Collapsed=0
-
-[Window][  Top Right]
-Pos=913,357
-Size=159,257
-Collapsed=0
-
-[Window][  Bot Right]
-Pos=487,419
-Size=159,461
-Collapsed=0
-
-[Window][Inspector]
-Pos=1606,19
-Size=314,504
-Collapsed=0
-DockId=0x00000005,0
-
-[Window][Docking]
-Pos=864,196
-Size=237,427
-Collapsed=0
-
-[Window][Debug Tools]
-Pos=1652,525
-Size=268,492
-Collapsed=0
-DockId=0x00000008,1
-
-[Window][Configuration]
-Pos=1652,525
-Size=268,492
-Collapsed=0
-DockId=0x00000008,0
-
-[Window][Console]
-Pos=0,525
-Size=1650,492
-Collapsed=0
-DockId=0x00000007,0
-
-[Window][scene]
-Pos=1,19
-Size=1191,661
+Size=400,400
 Collapsed=0
 
 [Window][Scene]
 Pos=0,19
-Size=1413,504
+Size=850,525
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Configuration]
+Pos=852,436
+Size=428,108
+Collapsed=0
+DockId=0x00000006,2
+
+[Window][Debug Tools]
+Pos=852,436
+Size=428,108
+Collapsed=0
+DockId=0x00000006,1
+
+[Window][Hierarchy]
+Pos=852,19
+Size=211,415
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Inspector]
+Pos=1065,19
+Size=215,415
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Textures]
+Pos=852,436
+Size=428,108
 Collapsed=0
 DockId=0x00000006,0
 
-[Window][EditorWindow]
-Pos=0,20
-Size=1280,700
+[Window][Console]
+Pos=0,546
+Size=1280,174
 Collapsed=0
-
-[Window][DockspaceViewport_11111111]
-Size=1280,720
-Collapsed=0
-
-[Window][Main]
-Pos=30,49
-Size=618,367
-Collapsed=0
-
-[Window][DockSpace Demo]
-Pos=0,0
-Size=1920,1017
-Collapsed=0
-
-[Window][Textures]
-Pos=1652,525
-Size=268,492
-Collapsed=0
-DockId=0x00000008,2
-
-[Window][Hierarchy]
-Pos=1415,19
-Size=189,504
-Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000002,0
 
 [Docking][Data]
-DockSpace       ID=0xFA06BC56 Pos=0,19 Size=1920,998 Split=Y
-  DockNode      ID=0x00000001 Parent=0xFA06BC56 SizeRef=1280,354 Split=X SelectedTab=0xF02CD328
-    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=773,620 CentralNode=1 SelectedTab=0x18B8C0DE
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=505,620 Split=X SelectedTab=0x788BAA0D
-      DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=189,620 SelectedTab=0x788BAA0D
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=314,620 SelectedTab=0xF02CD328
-  DockNode      ID=0x00000002 Parent=0xFA06BC56 SizeRef=1280,345 Split=X SelectedTab=0xF9BEF62A
-    DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=1650,213 SelectedTab=0xF9BEF62A
-    DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=268,213 SelectedTab=0x5CF1DB40
+DockSpace         ID=0xFA06BC56 Pos=0,19 Size=1280,701 Split=Y
+  DockNode        ID=0x00000001 Parent=0xFA06BC56 SizeRef=1280,525 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=850,633 CentralNode=1 SelectedTab=0x18B8C0DE
+    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=428,633 Split=Y SelectedTab=0x169CEE22
+      DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=428,415 Split=X SelectedTab=0xF02CD328
+        DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=211,313 SelectedTab=0x788BAA0D
+        DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=215,313 SelectedTab=0xF02CD328
+      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=428,108 SelectedTab=0x169CEE22
+  DockNode        ID=0x00000002 Parent=0xFA06BC56 SizeRef=1280,174 SelectedTab=0xF9BEF62A
 
