--- a/myEngine/files/x86/imgui.ini
+++ b/myEngine/files/x86/imgui.ini
@@ -10,39 +10,39 @@ Collapsed=0
 
 [Window][Scene]
 Pos=0,19
-Size=850,525
+Size=636,525
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Configuration]
-Pos=852,436
-Size=428,108
+Pos=638,436
+Size=642,108
 Collapsed=0
-DockId=0x00000006,2
+DockId=0x00000006,0
 
 [Window][Debug Tools]
-Pos=852,436
-Size=428,108
+Pos=638,436
+Size=642,108
 Collapsed=0
 DockId=0x00000006,1
 
 [Window][Hierarchy]
-Pos=852,19
-Size=211,415
+Pos=638,19
+Size=235,415
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Inspector]
-Pos=1065,19
-Size=215,415
+Pos=875,19
+Size=405,415
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Textures]
-Pos=852,436
-Size=428,108
+Pos=638,436
+Size=642,108
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000006,2
 
 [Window][Console]
 Pos=0,546
@@ -53,11 +53,11 @@ DockId=0x00000002,0
 [Docking][Data]
 DockSpace         ID=0xFA06BC56 Pos=0,19 Size=1280,701 Split=Y
   DockNode        ID=0x00000001 Parent=0xFA06BC56 SizeRef=1280,525 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=850,633 CentralNode=1 SelectedTab=0x18B8C0DE
-    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=428,633 Split=Y SelectedTab=0x169CEE22
+    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=1276,633 CentralNode=1 SelectedTab=0x18B8C0DE
+    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=642,633 Split=Y SelectedTab=0x169CEE22
       DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=428,415 Split=X SelectedTab=0xF02CD328
-        DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=211,313 SelectedTab=0x788BAA0D
-        DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=215,313 SelectedTab=0xF02CD328
-      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=428,108 SelectedTab=0x169CEE22
+        DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=235,313 SelectedTab=0x788BAA0D
+        DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=405,313 SelectedTab=0xF02CD328
+      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=428,108 SelectedTab=0x5CF1DB40
   DockNode        ID=0x00000002 Parent=0xFA06BC56 SizeRef=1280,174 SelectedTab=0xF9BEF62A
 
