--- a/myEngine/myEngine.vcxproj.filters
+++ b/myEngine/myEngine.vcxproj.filters
@@ -524,6 +524,9 @@
     <ClInclude Include="src\Module\Editor\PanelInspector.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="src\Utils\Chrono.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="files\default.fs" />
