--- a/myEngine/files/x86/imgui.ini
+++ b/myEngine/files/x86/imgui.ini
@@ -58,6 +58,6 @@ DockSpace         ID=0xFA06BC56 Pos=0,19 Size=1280,701 Split=Y
       DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=428,415 Split=X SelectedTab=0xF02CD328
         DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=235,313 SelectedTab=0x788BAA0D
         DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=405,313 SelectedTab=0xF02CD328
-      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=428,108 SelectedTab=0x5CF1DB40
+      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=428,108 SelectedTab=0x169CEE22
   DockNode        ID=0x00000002 Parent=0xFA06BC56 SizeRef=1280,174 SelectedTab=0xF9BEF62A
 
